# router/__init__.py
@@ -11,6 +11,7 @@ from router.admin_routes import admin_bp
 from router.test_routes import test_bp
 from router.attempt_routes import attempt_bp
 from router.proctoring_routes import proctoring_bp
+from router.template_routes import template_bp
 
 
 def register_blueprints(app):
@@ -26,4 +27,5 @@ def register_blueprints(app):
     app.register_blueprint(test_bp, url_prefix="/tests")
     app.register_blueprint(attempt_bp, url_prefix="/tests")
     app.register_blueprint(proctoring_bp, url_prefix="/tests")
+    app.register_blueprint(template_bp, url_prefix="/templates")
     app.register_blueprint(admin_bp, url_prefix="/admin")
